# soundhunter

./: .gitignore  TODO.md  index.html  package.json  pnpm-lock.yaml
scripts/: e2e-driver.mjs
src/: App.tsx  e2e-harness.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clap.rs  copy.rs  lib.rs  main.rs  scanner.rs  search.rs  state.rs  synonyms.rs
src/components/: ActivityBar.tsx  CopyOptionsDialog.tsx  CopyResultDialog.tsx  Waveform.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx
src/hooks/: useActivity.ts  useAudioPreview.ts  useConfirm.tsx  useTauri.ts
