[package]
name = "soundhunter"
version = "0.1.0"
edition = "2021"

[lib]
name = "soundhunter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tantivy = "0.22"
fuzzy-matcher = "0.3"
opener = "0.7"
tauri-plugin-fs = "2"
fastembed = "5"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
tokenizers = "0.22"
rustfft = "6"
rubato = "0.16"
ureq = "2"
ndarray = "0.17"
